Feat: add logic if user is a student
