# authentication/controller.ts
@@ -1,0 +1,37 @@
+import { Router } from "express";
+import ResponseHandler from "../response/response";
+import { LoginRequest, RegisterRequest } from "../utils";
+import { loginService, registerService } from "./service";
+import { validateLoginInput, validateRegisterInput } from "../middleware/validation";
+
+export default () => {
+
+    const authAPI = Router();
+
+    authAPI.post('/login', validateLoginInput, async (req, res) => {
+
+        try {
+            const value: LoginRequest = req.body;
+            const data = await loginService(value);
+            ResponseHandler.ok(req, res, data);
+        } catch (err) {
+            ResponseHandler.invalidRequest(req,res , err.message);
+        }
+    });
+
+    authAPI.post('/register', validateRegisterInput, async (req, res) => {
+
+        try {
+            const value: RegisterRequest = req.body;
+            const data = await registerService(value);
+            ResponseHandler.created(req, res, data);
+        } catch (err) {
+            ResponseHandler.invalidRequest(req,res , err.message);
+        }
+    });
+
+
+    return authAPI;
+}
+
+
