# routes.ts
@@ -1,8 +1,6 @@
 import { Router } from "express";
 import { logger } from "./middleware/logger";
-import { validateLoginInput, validateRegisterInput } from "./middleware/validation";
-import loginController from "./authentication/loginController";
-import regController from "./authentication/regController";
+import authController from "./authentication/controller";
 import fileController from './file/controller';
 import userController from './user/controller';
 import { authAdmin, authentication } from "./middleware/authentication";
@@ -11,8 +9,7 @@ import studentController from "./student/controller";
 const routes = Router();
 
 routes.use(logger);
-routes.use("/login", validateLoginInput, loginController());
-routes.use("/register", validateRegisterInput, regController());
+routes.use("/user", authController());
 routes.use('/students', authentication, studentController());
 routes.use("/file-upload", authentication, fileController());
 routes.use("/users", authAdmin, userController())
